; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_vm_resident.c_vm_page_grab_guard.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_vm_resident.c_vm_page_grab_guard.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@vm_page_guard_addr = common dso_local global i32 0, align 4
@vm_guard_count = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @vm_page_grab_guard() #0 {
  %1 = alloca i64, align 8
  %2 = load i32, i32* @vm_page_guard_addr, align 4
  %3 = call i64 @vm_page_grab_fictitious_common(i32 %2)
  store i64 %3, i64* %1, align 8
  %4 = load i64, i64* %1, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %8

6:                                                ; preds = %0
  %7 = call i32 @OSAddAtomic(i32 1, i32* @vm_guard_count)
  br label %8

8:                                                ; preds = %6, %0
  %9 = load i64, i64* %1, align 8
  ret i64 %9
}

declare dso_local i64 @vm_page_grab_fictitious_common(i32) #1

declare dso_local i32 @OSAddAtomic(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
